samples/_failures_safe/1761565409_409a21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9c1a36f.c: In function ‘main’:
./samples/SAFE/__tmp_c9c1a36f.c:149:12: error: missing terminating " character
  149 |     printf("3. Trans
      |            ^~~~~~~~~
./samples/SAFE/__tmp_c9c1a36f.c:149:5: error: expected expression at end of input
  149 |     printf("3. Trans
      |     ^~~~~~
./samples/SAFE/__tmp_c9c1a36f.c:149:5: error: expected declaration or statement at end of input
